# 2024-visual-slam

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
app/: CMakeLists.txt  run_kitti_stereo.cpp
config/: config.yaml
include/: algorithm.hpp  backend.hpp  camera.hpp  common_include.hpp  config.hpp  dataset.hpp  feature.hpp  frame.hpp  frontend.hpp  g2o_types.hpp  map.hpp  mappoint.hpp  viewer.hpp  visual_odometry.hpp
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
